# fex

./: CMakeLists.txt  config.h.in
include/: common.h  config.h  preview.h  window.h
src/: common.c  main.c  window.c
